Bug 675129: Improve efficiency of live interval splitting in linear scan register allocator. r=sstangl